# robotology-superbuild

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  apt-python.txt  apt.txt  pixi.toml  pixi_activation.bat  pixi_activation.sh
.ci/: all-options-enabled-cache.cmake  initial-cache.gh.cmake  install_debian.sh  install_debian_and_script.sh  script.sh
.github/: dependabot.yml
.github/workflows/: 174-regression-test.yml  build-docker-images.yml  ccpp.yml  ci.yml  generate-conda-packages.yaml  generate-non-periodical-conda-package.yaml  icubTechIIT_code.yml  matlab-one-line-install-test.yml  pixi-ci.yml  pixi-update-lock.yml  release.yml  update-latest-releases.yml  windows-choco-ros.yml
cmake/: BuildBayesFilters.cmake  BuildBiomechanicalAnalysisFramework.cmake  BuildBlockFactory.cmake  BuildCppAD.cmake  BuildGazeboYARPPlugins.cmake  BuildHumanDynamicsEstimation.cmake  BuildICUB.cmake  BuildICUBcontrib.cmake  BuildLieGroupControllers.cmake  BuildOpenVR.cmake  BuildOpenXR.cmake  BuildOsqpEigen.cmake  BuildQpSolversEigen.cmake  BuildRTF.cmake  BuildResolveRoboticsURICpp.cmake  BuildRobotTestingFramework.cmake  BuildUnicyclePlanner.cmake  BuildWBIToolboxControllers.cmake  BuildWBToolbox.cmake  BuildYARP.cmake  BuildYARP_telemetry.cmake  BuildYCM.cmake  Buildbipedal-locomotion-framework.cmake  BuildblockTest.cmake  Buildblocktest-yarp-plugins.cmake  Buildblocktestcore.cmake  Buildcasadi-matlab-bindings.cmake  Buildcasadi.cmake  Buildcer.cmake  Buildcodyco-modules.cmake  Builddiagnostic-daemon.cmake  Builddiagnosticdaemon.cmake  Buildergocub-software.cmake  Buildevent-driven.cmake  Buildfastcdr.cmake  Buildfind-superquadric.cmake  Buildforcetorque-yarp-devices.cmake  Buildfunny-things.cmake  Buildgym-ignition.cmake  Buildgz-sim-yarp-plugins.cmake  (+87 more)
cmake/template/: addPathsToUserEnvVariables.ps1.in  deactivate.bat.in  deactivate.sh.in  removePathsFromUserEnvVariables.ps1.in  setup.bat.in  setup.sh.in  startup_robotology_superbuild.m.in
conda/: conda_build_config.yml
conda/cmake/: CondaGenerationOptions.cmake  RobotologySuperbuildGenerateCondaRecipes.cmake
conda/cmake_recipe_template/: bld.bat  build.bat  build.sh  meta.yaml  recipe.yaml
conda/constructor_template/: construct.yaml.in
conda/metapackages_recipes_template/: robotology-distro-all.yaml  robotology-distro.yaml
conda/multisheller/: blockfactory_activate.msh  blockfactory_deactivate.msh  blocktest_activate.msh  blocktest_deactivate.msh  ergocub-software_activate.msh  ergocub-software_deactivate.msh  human-dynamics-estimation_activate.msh  human-gazebo_activate.msh  human-gazebo_deactivate.msh  icub-contrib-common_activate.msh  icub-contrib-common_deactivate.msh  icub-models_activate.msh  icub-models_deactivate.msh  idyntree-matlab-bindings_activate.msh  idyntree-matlab-bindings_deactivate.msh  matlab-whole-body-simulator_activate.msh  matlab-whole-body-simulator_deactivate.msh  mujoco-simulink-blockset_activate.msh  mujoco-simulink-blockset_deactivate.msh  wb-toolbox_activate.msh  wb-toolbox_deactivate.msh  wearables_activate.msh  wearables_deactivate.msh  whole-body-controllers_activate.msh  whole-body-controllers_deactivate.msh  yarp_activate.msh  yarp_deactivate.msh
conda/non_periodical_recipes/vvv-school-activation/: activate.msh  build.bat  build.sh  deactivate.msh  meta.yaml  recipe.yaml
conda/pure_python_recipe_template/: meta.yaml  recipe.yaml
conda/python/: generate_conda_recipes_from_metadatadata.py  generate_conda_recipes_from_metametadata.py
conda/recipe_template/: bld.bat  build.sh  meta.yaml
doc/: change-project-tags.md  cmake-options.md  conda-forge-overview.md  conda-forge.md  conda-powershell-troubleshooting.md  conda-recipe-generation.md  deprecated-installation-methods.md  developer-faqs.md  developers-faqs.md  environment-variables-configuration.md  faqs.md  github_actions.md  install-mambaforge.md  install-miniforge.md  matlab-one-line-install.md  pixi.md  profiles.md  unsupported-homebrew-installation.md  use-on-icub-head.md  vcpkg-dependencies.md  wsl2-xserver-configuration.md
packaging/windows/: CMakeLists.txt  README.md
packaging/windows/scripts/: addPathsToUserEnvVariables-vcpkg.ps1  addPathsToUserEnvVariables.ps1  removePathsFromUserEnvVariables-vcpkg.ps1  removePathsFromUserEnvVariables.ps1  setup-vcpkg.bat  setup.bat  setup.sh  update-env-variables.qs.in
releases/: 2020.02.yaml  2020.05.feat-01.yaml  2020.05.yaml  2020.08.feat-01.yaml  2020.08.patch-01.yaml  2020.08.yaml  2020.11.yaml  2021.02.feat-01.yaml  2021.02.yaml  2021.05.yaml  2021.08.1.yaml  2021.08.yaml  2021.11.0.yaml  2021.11.1.yaml  2022.02.0.yaml  2022.02.1.yaml  2022.05.0.yaml  2022.05.1.yaml  2022.05.2.yaml  2022.08.1.yaml  2022.09.1.yaml  2023.02.1.yaml  2023.02.2.yaml  2023.02.3.yaml  2023.05.0.yaml  2023.05.1.yaml  2023.05.2.yaml  2023.11.0.yaml  2024.02.0.yaml  2024.05.0.yaml  2024.08.0.yaml  2024.11.0.yaml  2024.11.1.yaml  2024.11.2.yaml  2025.02.0.yaml  2025.08.0.yaml  2025.11.0.yaml  latest.releases.yaml
scripts/: install_apt_dependencies.sh  install_apt_python_dependencies.sh  install_robotology_packages.m  robotologyBumpCondaBuildNumber.sh  robotologyGitStatus.sh  robotologyUpdateLatestReleases.sh
